--- a/PushySquares/Base.lproj/Main.storyboard
+++ b/PushySquares/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Game View Controller-->
         <scene sceneID="YTT-Wn-3ad">
             <objects>
-                <viewController id="k4l-qi-DG5" customClass="GameViewController" customModule="PushySquares" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="k4l-qi-DG5" customClass="AIGameViewController" customModule="PushySquares" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ahn-7X-zI0"/>
                         <viewControllerLayoutGuide type="bottom" id="1eb-2Z-oLF"/>
