--- a/PushySquares/Base.lproj/Main.storyboard
+++ b/PushySquares/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -119,6 +120,7 @@
                             </mask>
                         </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="5l0-kX-h0N"/>
                     <connections>
                         <outlet property="board" destination="YFR-Qc-Lvt" id="tEO-Zu-HFc"/>
                         <outlet property="statusBar" destination="qP8-as-STy" id="qXy-2j-sl0"/>
@@ -254,14 +256,123 @@
                         <outlet property="hostButton" destination="1uS-ys-9WZ" id="mzo-h6-ew3"/>
                         <outlet property="joinButton" destination="4KV-xc-N4b" id="CO6-GN-ujS"/>
                         <outlet property="startButton" destination="hwu-ku-f6x" id="sEV-zz-0Me"/>
+                        <segue destination="RKk-I9-67S" kind="presentation" modalPresentationStyle="fullScreen" id="3VP-BZ-gol"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ora-qq-Upf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-79" y="132"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="c1Q-r6-eCm">
+            <objects>
+                <viewController id="RKk-I9-67S" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JSQ-RQ-znH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0kq-aF-miQ" customClass="PressableButton" customModule="SwiftyButton">
+                                <rect key="frame" x="230" y="20" width="129" height="62"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="61" id="6O4-M9-TbT">
+                                        <variation key="heightClass=regular" constant="70"/>
+                                    </constraint>
+                                    <constraint firstAttribute="height" constant="62" id="HjC-ei-iWb"/>
+                                    <constraint firstAttribute="width" constant="129" id="OIN-y7-fqQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="30"/>
+                                <state key="normal" title="START"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowHeight">
+                                        <real key="value" value="7"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="6O4-M9-TbT"/>
+                                    </mask>
+                                </variation>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g3w-yp-yG5" customClass="PressableButton" customModule="SwiftyButton">
+                                <rect key="frame" x="16" y="20" width="129" height="62"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="129" id="ZwV-ka-1R4"/>
+                                    <constraint firstAttribute="height" constant="61" id="lqo-Lu-7f5">
+                                        <variation key="heightClass=regular" constant="70"/>
+                                    </constraint>
+                                    <constraint firstAttribute="height" constant="62" id="yaY-Dq-Cs3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="30"/>
+                                <state key="normal" title="BACK"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowHeight">
+                                        <real key="value" value="7"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="lqo-Lu-7f5"/>
+                                    </mask>
+                                </variation>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="uPt-bL-jOv">
+                                <rect key="frame" x="16" y="90" width="343" height="565"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yu4-6c-ZSg" customClass="FSPagerView" customModule="FSPagerView">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="266.5"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3KO-ca-XNs" customClass="FSPageControl" customModule="FSPagerView">
+                                        <rect key="frame" x="0.0" y="266.5" width="343" height="16"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="16" id="spe-Xx-F9I"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sgW-HC-CGN" customClass="FSPagerView" customModule="FSPagerView">
+                                        <rect key="frame" x="0.0" y="282.5" width="343" height="266.5"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ije-6h-Nkp" customClass="FSPageControl" customModule="FSPagerView">
+                                        <rect key="frame" x="0.0" y="549" width="343" height="16"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="16" id="RUI-MN-agj"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="sgW-HC-CGN" firstAttribute="height" secondItem="Yu4-6c-ZSg" secondAttribute="height" id="8AV-VZ-pha"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="RQe-dL-tNT"/>
+                        <color key="backgroundColor" red="1" green="0.95686274509803915" blue="0.81568627450980391" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="uPt-bL-jOv" firstAttribute="leading" secondItem="RQe-dL-tNT" secondAttribute="leading" constant="16" id="5ei-n5-jKJ"/>
+                            <constraint firstItem="g3w-yp-yG5" firstAttribute="top" secondItem="RQe-dL-tNT" secondAttribute="top" constant="20" id="BZf-hg-HOv"/>
+                            <constraint firstItem="0kq-aF-miQ" firstAttribute="top" secondItem="RQe-dL-tNT" secondAttribute="top" constant="20" id="JHH-uw-1GK"/>
+                            <constraint firstItem="RQe-dL-tNT" firstAttribute="trailing" secondItem="0kq-aF-miQ" secondAttribute="trailing" constant="16" id="NAZ-wF-ljI"/>
+                            <constraint firstItem="uPt-bL-jOv" firstAttribute="top" secondItem="0kq-aF-miQ" secondAttribute="bottom" constant="8" symbolic="YES" id="Tkh-on-eyd"/>
+                            <constraint firstItem="g3w-yp-yG5" firstAttribute="leading" secondItem="RQe-dL-tNT" secondAttribute="leading" constant="16" id="UOf-Q0-bsi"/>
+                            <constraint firstItem="RQe-dL-tNT" firstAttribute="trailing" secondItem="uPt-bL-jOv" secondAttribute="trailing" constant="16" id="VM1-Dn-UDW"/>
+                            <constraint firstItem="RQe-dL-tNT" firstAttribute="bottom" secondItem="uPt-bL-jOv" secondAttribute="bottom" constant="12" id="j8C-hq-3jy"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="gBS-J6-p3y"/>
+                    <connections>
+                        <segue destination="k4l-qi-DG5" kind="presentation" modalPresentationStyle="fullScreen" id="uDH-uY-j0M"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fPy-qa-UA1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="696.79999999999995" y="131.78410794602701"/>
+        </scene>
     </scenes>
     <designables>
+        <designable name="0kq-aF-miQ">
+            <size key="intrinsicContentSize" width="90" height="43"/>
+        </designable>
         <designable name="1uS-ys-9WZ">
             <size key="intrinsicContentSize" width="131" height="74"/>
         </designable>
@@ -271,11 +382,17 @@
         <designable name="XdR-qt-Jp4">
             <size key="intrinsicContentSize" width="118" height="74"/>
         </designable>
+        <designable name="g3w-yp-yG5">
+            <size key="intrinsicContentSize" width="72" height="43"/>
+        </designable>
         <designable name="hwu-ku-f6x">
             <size key="intrinsicContentSize" width="155" height="74"/>
         </designable>
     </designables>
     <resources>
         <image name="logo" width="862" height="364"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
